--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1531,6 +1531,22 @@ MRREVIEWER = {Yue-Qing Wang},
        URL = {https://doi.org/10.1007/s43034-020-00104-7},
 }
 		
+@incollection {MR4181311,
+    AUTHOR = {Misra, Gadadhar and Upmeier, Harald},
+     TITLE = {Toeplitz {$C^*$}-algebras on boundary orbits of symmetric
+              domains},
+ BOOKTITLE = {Operator algebras, {T}oeplitz operators and related topics},
+    SERIES = {Oper. Theory Adv. Appl.},
+    VOLUME = {279},
+     PAGES = {307--341},
+ PUBLISHER = {Birkh\"{a}user/Springer, Cham},
+      YEAR = {[2020] \copyright 2020},
+   MRCLASS = {32M15 (14M12 17C36 46E22 47B35 47L80)},
+  MRNUMBER = {4181311},
+       DOI = {10.1007/978-3-030-44651-2\_19},
+       URL = {https://doi.org/10.1007/978-3-030-44651-2_19},
+}
+		
 @article {MR4180253,
     AUTHOR = {Addario-Berry, Louigi and Bhamidi, Shankar and Sen, Sanchayan},
      TITLE = {A probabilistic approach to the leader problem in random
