one more update

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1267,7 +1267,22 @@
        URL = {https://doi.org/10.1080/03081087.2019.1602588},
 }
 		
-@article {MR4213738,
+@article {MR4219037,
+    AUTHOR = {Kus, Deniz and Venkatesh, R.},
+     TITLE = {Borel--de {S}iebenthal theory for affine reflection systems},
+   JOURNAL = {Mosc. Math. J.},
+  FJOURNAL = {Moscow Mathematical Journal},
+    VOLUME = {21},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {99--127},
+      ISSN = {1609-3321},
+   MRCLASS = {17B67 (17B22)},
+  MRNUMBER = {4219037},
+       DOI = {10.17323/1609-4514-2021-21-1-99-127},
+       URL = {https://doi.org/10.17323/1609-4514-2021-21-1-99-127},
+}
+	@article {MR4213738,
     AUTHOR = {Pingali, Vamsi Pritham and Varolin, Dror},
      TITLE = {Nonuniformly flat affine algebraic hypersurfaces},
    JOURNAL = {Nagoya Math. J.},
