--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -276,6 +276,19 @@
        URL = {https://doi.org/10.4064/aa200621-24-2},
 }
 		
+@incollection {MR4321169,
+    AUTHOR = {Gupta, Subhojoy and Seshadri, Harish},
+     TITLE = {Complex geometry of {T}eichm\"{u}ller domains},
+ BOOKTITLE = {Handbook of {T}eichm\"{u}ller theory. {V}ol. {VII}},
+    SERIES = {IRMA Lect. Math. Theor. Phys.},
+    VOLUME = {30},
+     PAGES = {63--87},
+ PUBLISHER = {Eur. Math. Soc., Z\"{u}rich},
+      YEAR = {[2020] \copyright 2020},
+   MRCLASS = {30F60 (30C62 30F35 32G15)},
+  MRNUMBER = {4321169},
+}
+		
 @article {MR4320365,
     AUTHOR = {Datta, Basudeb and Maity, Dipendu},
      TITLE = {Platonic solids, {A}rchimedean solids and semi-equivelar maps
@@ -291,6 +304,20 @@
   MRNUMBER = {4320365},
        DOI = {10.1016/j.disc.2021.112652},
        URL = {https://doi.org/10.1016/j.disc.2021.112652},
+}
+		
+@article {MR4317619,
+    AUTHOR = {Ayyer, Arvind and Prasad, Amritanshu and Spallone, Steven},
+     TITLE = {Macdonald trees and determinants of representations for finite
+              {C}oxeter groups},
+   JOURNAL = {Indian J. Discrete Math.},
+  FJOURNAL = {Indian Journal of Discrete Mathematics},
+    VOLUME = {5},
+      YEAR = {2019},
+    NUMBER = {1},
+     PAGES = {1--22},
+   MRCLASS = {05E10 (05A15 05A17)},
+  MRNUMBER = {4317619},
 }
 		
 @article {MR4317503,
@@ -801,6 +828,21 @@
        URL = {https://doi.org/10.1016/j.jmaa.2021.125434},
 }
 		
+@incollection {MR4275879,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Spectra as universal objects in categories of supports},
+ BOOKTITLE = {Quantum dynamics},
+    SERIES = {Banach Center Publ.},
+    VOLUME = {120},
+     PAGES = {53--69},
+ PUBLISHER = {Polish Acad. Sci. Inst. Math., Warsaw},
+      YEAR = {2020},
+   MRCLASS = {18F70 (06D05 14A05 14A22)},
+  MRNUMBER = {4275879},
+       DOI = {10.4064/bc120-5},
+       URL = {https://doi.org/10.4064/bc120-5},
+}
+		
 @article {MR4274703,
     AUTHOR = {Chmieli\'{n}ski, Jacek and Khurana, Divya and Sain, Debmalya},
      TITLE = {Local approximate symmetry of {B}irkhoff-{J}ames orthogonality
@@ -1018,6 +1060,35 @@
        URL = {https://doi.org/10.1007/s13366-020-00520-9},
 }
 		
+@article {MR4250270,
+    AUTHOR = {Bagchi, Sayan and Hait, Sourav and Roncal, Luz and Thangavelu,
+              Sundaram},
+     TITLE = {On the maximal function associated to the spherical means on
+              the {H}eisenberg group},
+   JOURNAL = {New York J. Math.},
+  FJOURNAL = {New York Journal of Mathematics},
+    VOLUME = {27},
+      YEAR = {2021},
+     PAGES = {631--675},
+   MRCLASS = {43A80 (22E25 22E30 42B15 42B25)},
+  MRNUMBER = {4250270},
+}
+		
+@article {MR4248770,
+    AUTHOR = {Roy, Dipankar},
+     TITLE = {The phase diagram for a class of multispecies permissive
+              asymmetric exclusion processes},
+   JOURNAL = {J. Stat. Mech. Theory Exp.},
+  FJOURNAL = {Journal of Statistical Mechanics: Theory and Experiment},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {Paper No. 013201, 19},
+   MRCLASS = {82C22},
+  MRNUMBER = {4248770},
+       DOI = {10.1088/1742-5468/abc7ba},
+       URL = {https://doi.org/10.1088/1742-5468/abc7ba},
+}
+		
 @article {MR4244063,
     AUTHOR = {Poria, Anirudha},
      TITLE = {Uncertainty principles for the {O}pdam-{C}herednik transform
@@ -1067,6 +1138,21 @@
   MRNUMBER = {4242540},
        DOI = {10.1007/s11856-021-2108-2},
        URL = {https://doi.org/10.1007/s11856-021-2108-2},
+}
+		
+@book {MR4242221,
+    AUTHOR = {Mukherji, Purabi},
+     TITLE = {Research schools on number theory in {I}ndia---during the 20th
+              century},
+      NOTE = {With a foreword by Gadadhar Misra and J. C. Bose},
+ PUBLISHER = {Springer, Singapore},
+      YEAR = {[2020] \copyright 2020},
+     PAGES = {xiv+177},
+      ISBN = {978-981-15-9619-3; 978-981-15-9620-9},
+   MRCLASS = {01A60 (01A32 11-03)},
+  MRNUMBER = {4242221},
+       DOI = {10.1007/978-981-15-9620-9},
+       URL = {https://doi.org/10.1007/978-981-15-9620-9},
 }
 		
 @article {MR4240612,
@@ -1413,6 +1499,40 @@ MRREVIEWER = {Alfonso Zamora},
   MRNUMBER = {4205055},
        DOI = {10.1093/imanum/drz071},
        URL = {https://doi.org/10.1093/imanum/drz071},
+}
+		
+@incollection {MR4200264,
+    AUTHOR = {Misra, Gadadhar and Upmeier, Harald},
+     TITLE = {Singular {H}ilbert modules on {J}ordan-{K}epler varieties},
+ BOOKTITLE = {Operator theory, operator algebras and their interactions with
+              geometry and topology---{R}onald {G}. {D}ouglas memorial
+              volume},
+    SERIES = {Oper. Theory Adv. Appl.},
+    VOLUME = {278},
+     PAGES = {425--453},
+ PUBLISHER = {Birkh\"{a}user/Springer, Cham},
+      YEAR = {[2020] \copyright 2020},
+   MRCLASS = {32M15 (14M12 17C36 46E22 47B35)},
+  MRNUMBER = {4200264},
+       DOI = {10.1007/978-3-030-43380-2\_20},
+       URL = {https://doi.org/10.1007/978-3-030-43380-2_20},
+}
+		
+@incollection {MR4200255,
+    AUTHOR = {Ghara, Soumitra and Misra, Gadadhar},
+     TITLE = {Decomposition of the tensor product of two {H}ilbert modules},
+ BOOKTITLE = {Operator theory, operator algebras and their interactions with
+              geometry and topology---{R}onald {G}. {D}ouglas memorial
+              volume},
+    SERIES = {Oper. Theory Adv. Appl.},
+    VOLUME = {278},
+     PAGES = {221--265},
+ PUBLISHER = {Birkh\"{a}user/Springer, Cham},
+      YEAR = {[2020] \copyright 2020},
+   MRCLASS = {47B32 (32A26 47A13 47A56 47A68 47B13)},
+  MRNUMBER = {4200255},
+       DOI = {10.1007/978-3-030-43380-2\_11},
+       URL = {https://doi.org/10.1007/978-3-030-43380-2_11},
 }
 		
 @article {MR4199635,
@@ -3802,6 +3922,19 @@ MRREVIEWER = {G\"{o}tz Pfeiffer},
        URL = {https://doi.org/10.1007/s13324-018-0221-0},
 }
 
+@incollection {MR3931445,
+    AUTHOR = {Anamby, Pramath and Das, Soumya},
+     TITLE = {Sturm-like bound for square-free {F}ourier coefficients},
+ BOOKTITLE = {L-functions and automorphic forms},
+    SERIES = {Contrib. Math. Comput. Sci.},
+    VOLUME = {10},
+     PAGES = {1--7},
+ PUBLISHER = {Springer, Cham},
+      YEAR = {2017},
+   MRCLASS = {11F30},
+  MRNUMBER = {3931445},
+}
+		
 @article {MR3930712,
     AUTHOR = {Khan, Mohammad Yasir Feroz and Biswas, Rahul and Sau, Ramesh
               Chandra},
