--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -23,7 +23,7 @@
     VOLUME = {79},
      PAGES = {139--164},
  PUBLISHER = {Hindustan Book Agency, Delhi},
-      YEAR = {[2020] \copyright 2020},
+      YEAR = {2020},
    MRCLASS = {37F10},
   MRNUMBER = {4353107},
 }
@@ -284,7 +284,7 @@
     VOLUME = {30},
      PAGES = {63--87},
  PUBLISHER = {Eur. Math. Soc., Z\"{u}rich},
-      YEAR = {[2020] \copyright 2020},
+      YEAR = {2020},
    MRCLASS = {30F60 (30C62 30F35 32G15)},
   MRNUMBER = {4321169},
 }
@@ -1146,7 +1146,7 @@
               century},
       NOTE = {With a foreword by Gadadhar Misra and J. C. Bose},
  PUBLISHER = {Springer, Singapore},
-      YEAR = {[2020] \copyright 2020},
+      YEAR = {2020},
      PAGES = {xiv+177},
       ISBN = {978-981-15-9619-3; 978-981-15-9620-9},
    MRCLASS = {01A60 (01A32 11-03)},
@@ -1511,7 +1511,7 @@ MRREVIEWER = {Alfonso Zamora},
     VOLUME = {278},
      PAGES = {425--453},
  PUBLISHER = {Birkh\"{a}user/Springer, Cham},
-      YEAR = {[2020] \copyright 2020},
+      YEAR = {2020},
    MRCLASS = {32M15 (14M12 17C36 46E22 47B35)},
   MRNUMBER = {4200264},
        DOI = {10.1007/978-3-030-43380-2\_20},
@@ -1528,7 +1528,7 @@ MRREVIEWER = {Alfonso Zamora},
     VOLUME = {278},
      PAGES = {221--265},
  PUBLISHER = {Birkh\"{a}user/Springer, Cham},
-      YEAR = {[2020] \copyright 2020},
+      YEAR = {2020},
    MRCLASS = {47B32 (32A26 47A13 47A56 47A68 47B13)},
   MRNUMBER = {4200255},
        DOI = {10.1007/978-3-030-43380-2\_11},
@@ -1675,7 +1675,7 @@ MRREVIEWER = {Yue-Qing Wang},
     VOLUME = {279},
      PAGES = {307--341},
  PUBLISHER = {Birkh\"{a}user/Springer, Cham},
-      YEAR = {[2020] \copyright 2020},
+      YEAR = {2020},
    MRCLASS = {32M15 (14M12 17C36 46E22 47B35 47L80)},
   MRNUMBER = {4181311},
        DOI = {10.1007/978-3-030-44651-2\_19},
@@ -1708,7 +1708,7 @@ MRREVIEWER = {Yue-Qing Wang},
     VOLUME = {340},
      PAGES = {59--72},
  PUBLISHER = {Springer, Singapore},
-      YEAR = {[2020] \copyright 2020},
+      YEAR = {2020},
    MRCLASS = {11F30 (11F37 11F46 11N37)},
   MRNUMBER = {4179368},
 }
