--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -276,7 +276,18 @@
        URL = {https://doi.org/10.4064/aa200621-24-2},
 }
 		
-@incollection {MR4321169,
+@incollection {MR4321170,
+    AUTHOR = {Gupta, Subhojoy},
+     TITLE = {Holomorphic quadratic differentials in {T}eichm\"{u}ller theory},
+ BOOKTITLE = {Handbook of {T}eichm\"{u}ller theory. {V}ol. {VII}},
+    SERIES = {IRMA Lect. Math. Theor. Phys.},
+    VOLUME = {30},
+     PAGES = {89--124},
+ PUBLISHER = {Eur. Math. Soc., Z\"{u}rich},
+      YEAR = {2020},
+   MRCLASS = {30F60 (32G15 57K20)},
+  MRNUMBER = {4321170},
+}@incollection {MR4321169,
     AUTHOR = {Gupta, Subhojoy and Seshadri, Harish},
      TITLE = {Complex geometry of {T}eichm\"{u}ller domains},
  BOOKTITLE = {Handbook of {T}eichm\"{u}ller theory. {V}ol. {VII}},
