--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,119 @@
+@article {MR4375026,
+    AUTHOR = {Gaddam, Sharat and Gudi, Thirupathi and Porwal, Kamana},
+     TITLE = {Two new approaches for solving elliptic obstacle problems
+              using discontinuous {G}alerkin methods},
+   JOURNAL = {BIT},
+  FJOURNAL = {BIT. Numerical Mathematics},
+    VOLUME = {62},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {89--124},
+      ISSN = {0006-3835},
+   MRCLASS = {65N30 (65K15 65N15)},
+  MRNUMBER = {4375026},
+       DOI = {10.1007/s10543-021-00869-w},
+       URL = {https://doi.org/10.1007/s10543-021-00869-w},
+}
+		
+@article {MR4375010,
+    AUTHOR = {Ganguly, Pritam and Thangavelu, Sundaram},
+     TITLE = {An uncertainty principle for spectral projections on rank one
+              symmetric spaces of noncompact type},
+   JOURNAL = {Ann. Mat. Pura Appl. (4)},
+  FJOURNAL = {Annali di Matematica Pura ed Applicata. Series IV},
+    VOLUME = {201},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {289--311},
+      ISSN = {0373-3114},
+   MRCLASS = {43A85 (22E30 33C45 43A25)},
+  MRNUMBER = {4375010},
+       DOI = {10.1007/s10231-021-01116-3},
+       URL = {https://doi.org/10.1007/s10231-021-01116-3},
+}
+		
+@article {MR4373665,
+    AUTHOR = {Binda, Federico and Krishna, Amalendu},
+     TITLE = {Zero-cycle groups on algebraic varieties},
+   JOURNAL = {J. \'{E}c. polytech. Math.},
+  FJOURNAL = {Journal de l'\'{E}cole polytechnique. Math\'{e}matiques},
+    VOLUME = {9},
+      YEAR = {2022},
+     PAGES = {281--325},
+      ISSN = {2429-7100},
+   MRCLASS = {14C15 (14F42 19E15)},
+  MRNUMBER = {4373665},
+       DOI = {10.5802/jep.183},
+       URL = {https://doi.org/10.5802/jep.183},
+}
+		
+@article {MR4366076,
+    AUTHOR = {Iyer, Srikanth K. and Jhawar, Sanjoy Kr.},
+     TITLE = {Phase transitions and percolation at criticality in enhanced
+              random connection models},
+   JOURNAL = {Math. Phys. Anal. Geom.},
+  FJOURNAL = {Mathematical Physics, Analysis and Geometry. An International
+              Journal Devoted to the Theory and Applications of Analysis and
+              Geometry to Physics},
+    VOLUME = {25},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {Paper No. 4, 40},
+      ISSN = {1385-0172},
+   MRCLASS = {82B43 (05C82 60K35 82B26)},
+  MRNUMBER = {4366076},
+       DOI = {10.1007/s11040-021-09409-y},
+       URL = {https://doi.org/10.1007/s11040-021-09409-y},
+}
+		
+@article {MR4363743,
+    AUTHOR = {Bera, Sayani and Chandel, Vikramjeet Singh and Londhe,
+              Mayuresh},
+     TITLE = {On a spectral version of {C}artan's theorem},
+   JOURNAL = {J. Geom. Anal.},
+  FJOURNAL = {Journal of Geometric Analysis},
+    VOLUME = {32},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {Paper No. 70, 27},
+      ISSN = {1050-6926},
+   MRCLASS = {32H02 (15A18 32F45 32H50 47A56)},
+  MRNUMBER = {4363743},
+       DOI = {10.1007/s12220-021-00833-8},
+       URL = {https://doi.org/10.1007/s12220-021-00833-8},
+}
+		
+@article {MR4363742,
+    AUTHOR = {Datar, Ved and Jacob, Adam},
+     TITLE = {Hermitian-{Y}ang-{M}ills connections on collapsing
+              elliptically fibered {$K$}3 surfaces},
+   JOURNAL = {J. Geom. Anal.},
+  FJOURNAL = {Journal of Geometric Analysis},
+    VOLUME = {32},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {Paper No. 69, 30},
+      ISSN = {1050-6926},
+   MRCLASS = {53B35 (53C07 53C26 53C55)},
+  MRNUMBER = {4363742},
+       DOI = {10.1007/s12220-021-00808-9},
+       URL = {https://doi.org/10.1007/s12220-021-00808-9},
+}
+		
+@incollection {MR4362539,
+    AUTHOR = {Dond, Asha K. and Gudi, Thirupathi},
+     TITLE = {A posteriori error analysis for patch-wise local projection
+              stabilized {FEM} for convection-diffusion problems},
+ BOOKTITLE = {Hyperbolic problems: theory, numerics, applications},
+    SERIES = {AIMS Ser. Appl. Math.},
+    VOLUME = {10},
+     PAGES = {408--418},
+ PUBLISHER = {Am. Inst. Math. Sci. (AIMS), Springfield, MO},
+      YEAR = {[2020] \copyright 2020},
+   MRCLASS = {65N30 (35Jxx 65N12 65N15)},
+  MRNUMBER = {4362539},
+}
+		
 @article {MR4354861,
     AUTHOR = {Ganguly, Pritam and Manna, Ramesh and Thangavelu, Sundaram},
      TITLE = {On a theorem of {C}hernoff on rank one {R}iemannian symmetric
