--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -157,6 +157,8 @@
       ISSN = {0002-9327},
    MRCLASS = {15B48 (05E05 15B35 26A48 30B10)},
   MRNUMBER = {4349135},
+       DOI = {10.1353/ajm.2021.0049},
+       URL = {https://doi.org/10.1353/ajm.2021.0049},
 }
 		
 @article {MR4343968,
