--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,119 @@
+@article {MR4396942,
+    AUTHOR = {Bhattacharyya, Tirthankar and Sau, Haripada},
+     TITLE = {Interpolating sequences and the {T}oeplitz-{C}orona theorem on
+              the symmetrized bidisk},
+   JOURNAL = {J. Operator Theory},
+  FJOURNAL = {Journal of Operator Theory},
+    VOLUME = {87},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {435--459},
+      ISSN = {0379-4024},
+   MRCLASS = {47A13 (46E22 47A25 47A56 47A57 47B32)},
+  MRNUMBER = {4396942},
+       DOI = {10.7900/jot},
+       URL = {https://doi.org/10.7900/jot},
+}
+		
+@article {MR4385379,
+    AUTHOR = {B\"{o}cherer, Siegfried and Das, Soumya},
+     TITLE = {On {F}ourier coefficients of elliptic modular forms {${\rm
+              mod}\,\ell$} with applications to {S}iegel modular forms},
+   JOURNAL = {Manuscripta Math.},
+  FJOURNAL = {Manuscripta Mathematica},
+    VOLUME = {167},
+      YEAR = {2022},
+    NUMBER = {3-4},
+     PAGES = {405--434},
+      ISSN = {0025-2611},
+   MRCLASS = {11F30 (11F33 11F46 11F50)},
+  MRNUMBER = {4385379},
+       DOI = {10.1007/s00229-021-01277-8},
+       URL = {https://doi.org/10.1007/s00229-021-01277-8},
+}
+		
+@article {MR4383345,
+    AUTHOR = {Roy, Saikat and Bagchi, Satya and Sain, Debmalya},
+     TITLE = {Birkhoff-{J}ames orthogonality in complex {B}anach spaces and
+              {B}hatia-\v{S}emrl theorem revisited},
+   JOURNAL = {Mediterr. J. Math.},
+  FJOURNAL = {Mediterranean Journal of Mathematics},
+    VOLUME = {19},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {Paper No. 58, 15},
+      ISSN = {1660-5446},
+   MRCLASS = {46B20 (47A12 47A30)},
+  MRNUMBER = {4383345},
+       DOI = {10.1007/s00009-022-01979-7},
+       URL = {https://doi.org/10.1007/s00009-022-01979-7},
+}
+		
+@article {MR4382800,
+    AUTHOR = {Gupta, Rahul and Krishna, Amalendu},
+     TITLE = {Relative {$K$}-theory via 0-cycles in finite characteristic},
+   JOURNAL = {Ann. K-Theory},
+  FJOURNAL = {Annals of K-Theory},
+    VOLUME = {6},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {673--712},
+      ISSN = {2379-1683},
+   MRCLASS = {14C25 (19E08 19E15)},
+  MRNUMBER = {4382800},
+       DOI = {10.2140/akt.2021.6.673},
+       URL = {https://doi.org/10.2140/akt.2021.6.673},
+}
+		
+@article {MR4379903,
+    AUTHOR = {Bhowmik, Mithun and Pusti, Sanjoy},
+     TITLE = {An extension problem and {H}ardy's inequality for the
+              fractional {L}aplace-{B}eltrami operator on {R}iemannian
+              symmetric spaces of noncompact type},
+   JOURNAL = {J. Funct. Anal.},
+  FJOURNAL = {Journal of Functional Analysis},
+    VOLUME = {282},
+      YEAR = {2022},
+    NUMBER = {9},
+     PAGES = {Paper No. 109413, 40},
+      ISSN = {0022-1236},
+   MRCLASS = {43A85 (22E30 26A33)},
+  MRNUMBER = {4379903},
+       DOI = {10.1016/j.jfa.2022.109413},
+       URL = {https://doi.org/10.1016/j.jfa.2022.109413},
+}
+		
+@article {MR4379818,
+    AUTHOR = {Ayyer, Arvind and Nadeau, Philippe},
+     TITLE = {Combinatorics of a disordered two-species {ASEP} on a torus},
+   JOURNAL = {European J. Combin.},
+  FJOURNAL = {European Journal of Combinatorics},
+    VOLUME = {103},
+      YEAR = {2022},
+     PAGES = {Paper No. 103511, 20},
+      ISSN = {0195-6698},
+   MRCLASS = {82C44 (05A15 05A19)},
+  MRNUMBER = {4379818},
+       DOI = {10.1016/j.ejc.2022.103511},
+       URL = {https://doi.org/10.1016/j.ejc.2022.103511},
+}
+		
+@article {MR4375520,
+    AUTHOR = {Khare, Apoorva and Tikaradze, Akaki},
+     TITLE = {Covering modules by proper submodules},
+   JOURNAL = {Comm. Algebra},
+  FJOURNAL = {Communications in Algebra},
+    VOLUME = {50},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {498--507},
+      ISSN = {0092-7872},
+   MRCLASS = {13C05 (13F05 13F10 13L05)},
+  MRNUMBER = {4375520},
+       DOI = {10.1080/00927872.2021.1959922},
+       URL = {https://doi.org/10.1080/00927872.2021.1959922},
+}
+		
 @article {MR4375026,
     AUTHOR = {Gaddam, Sharat and Gudi, Thirupathi and Porwal, Kamana},
      TITLE = {Two new approaches for solving elliptic obstacle problems
@@ -109,7 +225,7 @@
     VOLUME = {10},
      PAGES = {408--418},
  PUBLISHER = {Am. Inst. Math. Sci. (AIMS), Springfield, MO},
-      YEAR = {[2020] \copyright 2020},
+      YEAR = {2020},
    MRCLASS = {65N30 (35Jxx 65N12 65N15)},
   MRNUMBER = {4362539},
 }
