--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,82 @@
+@article {MR4405999,
+    AUTHOR = {Ayyer, Arvind and Hathcock, Daniel and Tetali, Prasad},
+     TITLE = {Toppleable permutations, excedances and acyclic orientations},
+   JOURNAL = {Comb. Theory},
+  FJOURNAL = {Combinatorial Theory},
+    VOLUME = {2},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {Paper No. 10, 28},
+   MRCLASS = {05A19 (05A05)},
+  MRNUMBER = {4405999},
+       DOI = {10.5070/c62156882},
+       URL = {https://doi.org/10.5070/c62156882},
+}
+		
+@article {MR4404204,
+    AUTHOR = {Balodi, Mamta and Upadhyay, Sumit Kumar},
+     TITLE = {Simplicity of iterated {O}re extensions},
+   JOURNAL = {Asian-Eur. J. Math.},
+  FJOURNAL = {Asian-European Journal of Mathematics},
+    VOLUME = {15},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {Paper No. 2250052, 11},
+      ISSN = {1793-5571},
+   MRCLASS = {16U20 (16S36 17A36)},
+  MRNUMBER = {4404204},
+       DOI = {10.1142/S1793557122500528},
+       URL = {https://doi.org/10.1142/S1793557122500528},
+}
+		
+@article {MR4403790,
+    AUTHOR = {Ray, Anubhab and Paul, Kallol and Sain, Debmalya and Dey,
+              Subhrajit},
+     TITLE = {Some remarks on orthogonality of bounded linear operators},
+   JOURNAL = {J. Convex Anal.},
+  FJOURNAL = {Journal of Convex Analysis},
+    VOLUME = {29},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {165--181},
+      ISSN = {0944-6532},
+   MRCLASS = {47L05 (46B20)},
+  MRNUMBER = {4403790},
+}
+		
+@article {MR4402147,
+    AUTHOR = {Giri, Deb Kumar and Srivastava, R. K.},
+     TITLE = {Heisenberg uniqueness pairs for the finitely many parallel
+              lines with an irregular gap},
+   JOURNAL = {J. Fourier Anal. Appl.},
+  FJOURNAL = {The Journal of Fourier Analysis and Applications},
+    VOLUME = {28},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {Paper No. 37, 17},
+      ISSN = {1069-5869},
+   MRCLASS = {42A38 (44A35)},
+  MRNUMBER = {4402147},
+       DOI = {10.1007/s00041-022-09932-8},
+       URL = {https://doi.org/10.1007/s00041-022-09932-8},
+}
+		
+@article {MR4398550,
+    AUTHOR = {Bera, Sudip},
+     TITLE = {Combinatorialization of {S}ury and {M}c{L}aughlin identities
+              and general linear recurrences by a unified approach},
+   JOURNAL = {Enumer. Comb. Appl.},
+  FJOURNAL = {Enumerative Combinatorics and Applications},
+    VOLUME = {1},
+      YEAR = {2021},
+    NUMBER = {1},
+     PAGES = {Paper No. S2R5, 12},
+   MRCLASS = {05A19 (05A05 05C20 05E05)},
+  MRNUMBER = {4398550},
+       DOI = {10.54550/eca},
+       URL = {https://doi.org/10.54550/eca},
+}
+		
 @article {MR4396942,
     AUTHOR = {Bhattacharyya, Tirthankar and Sau, Haripada},
      TITLE = {Interpolating sequences and the {T}oeplitz-{C}orona theorem on
@@ -13,6 +92,73 @@
   MRNUMBER = {4396942},
        DOI = {10.7900/jot},
        URL = {https://doi.org/10.7900/jot},
+}
+		
+@article {MR4396400,
+    AUTHOR = {Ghosh, Mrinal K. and Pradhan, Somnath},
+     TITLE = {A nonzero-sum risk-sensitive stochastic differential game in
+              the orthant},
+   JOURNAL = {Math. Control Relat. Fields},
+  FJOURNAL = {Mathematical Control and Related Fields},
+    VOLUME = {12},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {343--370},
+      ISSN = {2156-8472},
+   MRCLASS = {91A23 (93E20)},
+  MRNUMBER = {4396400},
+       DOI = {10.3934/mcrf.2021025},
+       URL = {https://doi.org/10.3934/mcrf.2021025},
+}
+		
+@incollection {MR4394425,
+    AUTHOR = {Patil, Dilip P. and Verma, J. K.},
+     TITLE = {Rational points and trace forms on a finite algebra over a
+              real closed field},
+ BOOKTITLE = {Commutative algebra},
+     PAGES = {669--687},
+ PUBLISHER = {Springer, Cham},
+      YEAR = {2021},
+   MRCLASS = {13P15 (13B22 13F30 13H15 14Q30)},
+  MRNUMBER = {4394425},
+       DOI = {10.1007/978-3-030-89694-2\_22},
+       URL = {https://doi.org/10.1007/978-3-030-89694-2_22},
+}
+		
+@article {MR4393698,
+    AUTHOR = {Manikandan, K. and Vishnu Priya, N. and Senthilvelan, M. and
+              Sankaranarayanan, R.},
+     TITLE = {Higher-order matter rogue waves and their deformations in
+              two-component {B}ose-{E}instein condensates},
+   JOURNAL = {Waves Random Complex Media},
+  FJOURNAL = {Waves in Random and Complex Media. Propagation, Scattering and
+              Imaging},
+    VOLUME = {32},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {867--886},
+      ISSN = {1745-5030},
+   MRCLASS = {81Q80 (35Q40 76Y05 82C10)},
+  MRNUMBER = {4393698},
+       DOI = {10.1080/17455030.2020.1804645},
+       URL = {https://doi.org/10.1080/17455030.2020.1804645},
+}
+		
+@incollection {MR4390221,
+    AUTHOR = {Balhara, Rakesh and Boggarapu, Pradeep and Thangavelu,
+              Sundaram},
+     TITLE = {An extension problem and {H}ardy type inequalities for the
+              {G}rushin operator},
+ BOOKTITLE = {Geometric aspects of harmonic analysis},
+    SERIES = {Springer INdAM Ser.},
+    VOLUME = {45},
+     PAGES = {1--28},
+ PUBLISHER = {Springer, Cham},
+      YEAR = {2021},
+   MRCLASS = {43A85 (42B20)},
+  MRNUMBER = {4390221},
+       DOI = {10.1007/978-3-030-72058-2\_1},
+       URL = {https://doi.org/10.1007/978-3-030-72058-2_1},
 }
 		
 @article {MR4385379,
