--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,182 @@
+@article {MR4420102,
+    AUTHOR = {Bhattacharyya, Tirthankar and Biswas, Anindya and Maitra,
+              Anwoy},
+     TITLE = {On the geometry of the symmetrized bidisc},
+   JOURNAL = {Indiana Univ. Math. J.},
+  FJOURNAL = {Indiana University Mathematics Journal},
+    VOLUME = {71},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {685--713},
+      ISSN = {0022-2518},
+   MRCLASS = {32M05 (32F45 32H02)},
+  MRNUMBER = {4420102},
+}
+		
+@article {MR4415946,
+    AUTHOR = {Aiyappan, S. and Pettersson, K. and Sufian, A.},
+     TITLE = {Homogenization of a non-periodic oscillating boundary via
+              periodic unfolding},
+   JOURNAL = {Differ. Equ. Appl.},
+  FJOURNAL = {Differential Equations \& Applications},
+    VOLUME = {14},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {31--47},
+      ISSN = {1847-120X},
+   MRCLASS = {35B27 (35J20 80M35)},
+  MRNUMBER = {4415946},
+       DOI = {10.7153/dea-2022-14-03},
+       URL = {https://doi.org/10.7153/dea-2022-14-03},
+}
+		
+@article {MR4411728,
+    AUTHOR = {Misra, Gadadhar and Pramanick, Paramita and Sinha, Kalyan B.},
+     TITLE = {A trace inequality for commuting {$d$}-tuples of operators},
+   JOURNAL = {Integral Equations Operator Theory},
+  FJOURNAL = {Integral Equations and Operator Theory},
+    VOLUME = {94},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {Paper No. 16, 37},
+      ISSN = {0378-620X},
+   MRCLASS = {47B10 (47A08 47A16 47B20 47B37)},
+  MRNUMBER = {4411728},
+       DOI = {10.1007/s00020-022-02693-5},
+       URL = {https://doi.org/10.1007/s00020-022-02693-5},
+}
+		
+@article {MR4410735,
+    AUTHOR = {Ern, Alexandre and Gudi, Thirupathi and Smears, Iain and
+              Vohral\'{\i}k, Martin},
+     TITLE = {Equivalence of local- and global-best approximations, a simple
+              stable local commuting projector, and optimal {$hp$}
+              approximation estimates in {$\bold H({\rm div})$}},
+   JOURNAL = {IMA J. Numer. Anal.},
+  FJOURNAL = {IMA Journal of Numerical Analysis},
+    VOLUME = {42},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {1023--1049},
+      ISSN = {0272-4979},
+   MRCLASS = {65N30 (65N15)},
+  MRNUMBER = {4410735},
+       DOI = {10.1093/imanum/draa103},
+       URL = {https://doi.org/10.1093/imanum/draa103},
+}
+		
+@article {MR4409884,
+    AUTHOR = {Bhattacharyya, Tirthankar and Kumar, Poornendu and Sau,
+              Haripada},
+     TITLE = {Distinguished varieties through the {B}erger-{C}oburn-{L}ebow
+              theorem},
+   JOURNAL = {Anal. PDE},
+  FJOURNAL = {Analysis \& PDE},
+    VOLUME = {15},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {477--506},
+      ISSN = {2157-5045},
+   MRCLASS = {47A13 (32C25 47A20 47A48 47A57)},
+  MRNUMBER = {4409884},
+       DOI = {10.2140/apde.2022.15.477},
+       URL = {https://doi.org/10.2140/apde.2022.15.477},
+}
+		
+@article {MR4409689,
+    AUTHOR = {Mukherjee, Sajal and Mukherjee, Sanjay},
+     TITLE = {Counting on matrices},
+   JOURNAL = {Enumer. Comb. Appl.},
+  FJOURNAL = {Enumerative Combinatorics and Applications},
+    VOLUME = {1},
+      YEAR = {2021},
+    NUMBER = {3},
+     PAGES = {Paper No. S2R23, 9},
+   MRCLASS = {05C30 (05A05 05A19 05C38)},
+  MRNUMBER = {4409689},
+       DOI = {10.54550/eca2021v1s3r23},
+       URL = {https://doi.org/10.54550/eca2021v1s3r23},
+}
+		
+@article {MR4409245,
+    AUTHOR = {Belton, Alexander and Guillot, Dominique and Khare, Apoorva
+              and Putinar, Mihai},
+     TITLE = {Hirschman-{W}idder densities},
+   JOURNAL = {Appl. Comput. Harmon. Anal.},
+  FJOURNAL = {Applied and Computational Harmonic Analysis. Time-Frequency
+              and Time-Scale Analysis, Wavelets, Numerical Algorithms, and
+              Applications},
+    VOLUME = {60},
+      YEAR = {2022},
+     PAGES = {396--425},
+      ISSN = {1063-5203},
+   MRCLASS = {44A10 (05E05 15A15 15B48 30C40 60E05)},
+  MRNUMBER = {4409245},
+       DOI = {10.1016/j.acha.2022.04.002},
+       URL = {https://doi.org/10.1016/j.acha.2022.04.002},
+}
+		
+@article {MR4407856,
+    AUTHOR = {Anoop, V. P. and Parui, Sanjay},
+     TITLE = {Hardy-{L}ittlewood-{S}obolev inequality for upper half space},
+   JOURNAL = {Ann. Math. Blaise Pascal},
+  FJOURNAL = {Annales Math\'{e}matiques Blaise Pascal},
+    VOLUME = {28},
+      YEAR = {2021},
+    NUMBER = {2},
+     PAGES = {117--140},
+      ISSN = {1259-1734},
+   MRCLASS = {42B37 (42B10 42B35)},
+  MRNUMBER = {4407856},
+}
+		
+@article {MR4407678,
+    AUTHOR = {Dhillon, Gurbir and Khare, Apoorva},
+     TITLE = {The weights of simple modules in {C}ategory {$\Cal{O}$} for
+              {K}ac-{M}oody algebras},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {603},
+      YEAR = {2022},
+     PAGES = {164--200},
+      ISSN = {0021-8693},
+   MRCLASS = {17B10 (17B37 17B67 20G42 22E47)},
+  MRNUMBER = {4407678},
+       DOI = {10.1016/j.jalgebra.2022.03.030},
+       URL = {https://doi.org/10.1016/j.jalgebra.2022.03.030},
+}
+		
+@article {MR4406254,
+    AUTHOR = {Gupta, Rahul and Krishna, Amalendu},
+     TITLE = {Idele class groups with modulus},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {404},
+      YEAR = {2022},
+     PAGES = {Paper No. 108376, 75},
+      ISSN = {0001-8708},
+   MRCLASS = {14C25 (11R56 14F42 19E15)},
+  MRNUMBER = {4406254},
+       DOI = {10.1016/j.aim.2022.108376},
+       URL = {https://doi.org/10.1016/j.aim.2022.108376},
+}
+		
+@article {MR4406230,
+    AUTHOR = {Burton, Benjamin A. and Datta, Basudeb and Spreer, Jonathan},
+     TITLE = {Flip graphs of stacked and flag triangulations of the
+              2-sphere},
+   JOURNAL = {Electron. J. Combin.},
+  FJOURNAL = {Electronic Journal of Combinatorics},
+    VOLUME = {29},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {Paper No. 2.6, 30},
+   MRCLASS = {57Q15 (05C10)},
+  MRNUMBER = {4406230},
+       DOI = {10.37236/10292},
+       URL = {https://doi.org/10.37236/10292},
+}
+		
 @article {MR4405999,
     AUTHOR = {Ayyer, Arvind and Hathcock, Daniel and Tetali, Prasad},
      TITLE = {Toppleable permutations, excedances and acyclic orientations},
@@ -77,6 +256,23 @@
        URL = {https://doi.org/10.54550/eca},
 }
 		
+@article {MR4397035,
+    AUTHOR = {Bleher, Frauke M. and Chinburg, Ted and Greenberg, Ralph and
+              Kakde, Mahesh and Sharifi, Romyar and Taylor, Martin J.},
+     TITLE = {Exterior powers in {I}wasawa theory},
+   JOURNAL = {J. Eur. Math. Soc. (JEMS)},
+  FJOURNAL = {Journal of the European Mathematical Society (JEMS)},
+    VOLUME = {24},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {967--1005},
+      ISSN = {1435-9855},
+   MRCLASS = {11R23 (11R34)},
+  MRNUMBER = {4397035},
+       DOI = {10.4171/JEMS/1115},
+       URL = {https://doi.org/10.4171/JEMS/1115},
+}
+		
 @article {MR4396942,
     AUTHOR = {Bhattacharyya, Tirthankar and Sau, Haripada},
      TITLE = {Interpolating sequences and the {T}oeplitz-{C}orona theorem on
@@ -109,6 +305,67 @@
   MRNUMBER = {4396400},
        DOI = {10.3934/mcrf.2021025},
        URL = {https://doi.org/10.3934/mcrf.2021025},
+}
+		
+@article {MR4395924,
+    AUTHOR = {Ayyer, Arvind and B\'{e}nyi, Be\'{a}ta},
+     TITLE = {Toppling on permutations with an extra chip},
+   JOURNAL = {Electron. J. Combin.},
+  FJOURNAL = {Electronic Journal of Combinatorics},
+    VOLUME = {28},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {Paper No. 4.18, 28},
+   MRCLASS = {05A15 (05A05 05A10 05A19)},
+  MRNUMBER = {4395924},
+       DOI = {10.37236/10420},
+       URL = {https://doi.org/10.37236/10420},
+}
+		
+@article {MR4395820,
+    AUTHOR = {Sain, Debmalya and Roy, Saikat and Bagchi, Satya and Balestro,
+              Vitor},
+     TITLE = {A study of symmetric points in {B}anach spaces},
+   JOURNAL = {Linear Multilinear Algebra},
+  FJOURNAL = {Linear and Multilinear Algebra},
+    VOLUME = {70},
+      YEAR = {2022},
+    NUMBER = {5},
+     PAGES = {888--898},
+      ISSN = {0308-1087},
+   MRCLASS = {46B20 (52A21)},
+  MRNUMBER = {4395820},
+       DOI = {10.1080/03081087.2020.1749541},
+       URL = {https://doi.org/10.1080/03081087.2020.1749541},
+}
+		
+@article {MR4395728,
+    AUTHOR = {Azimi, Ali and Bapat, Ravindra B. and Goel, Shivani},
+     TITLE = {Steiner distance matrix of caterpillar graphs},
+   JOURNAL = {Spec. Matrices},
+  FJOURNAL = {Special Matrices},
+    VOLUME = {10},
+      YEAR = {2022},
+     PAGES = {267--284},
+   MRCLASS = {05C50 (05C05 05C12)},
+  MRNUMBER = {4395728},
+       DOI = {10.1515/spma-2022-0162},
+       URL = {https://doi.org/10.1515/spma-2022-0162},
+}
+		
+@article {MR4394659,
+    AUTHOR = {Goyal, Shuchita and Shukla, Samir and Singh, Anurag},
+     TITLE = {Matching complexes of {$3 \times n$} grid graphs},
+   JOURNAL = {Electron. J. Combin.},
+  FJOURNAL = {Electronic Journal of Combinatorics},
+    VOLUME = {28},
+      YEAR = {2021},
+    NUMBER = {4},
+     PAGES = {Paper No. 4.16, 26},
+   MRCLASS = {05E45 (55P15)},
+  MRNUMBER = {4394659},
+       DOI = {10.37236/10496},
+       URL = {https://doi.org/10.37236/10496},
 }
 		
 @incollection {MR4394425,
