--- a/_all-courses/ma208.md
+++ b/_all-courses/ma208.md
@@ -1,6 +1,7 @@
 ---
 code: MA 208
 title: Proofs and Programs
+credits: "3:1"
 
 books:
   - author: Jeremy Avigad, Leonardo de Moura, Soonho Kong and Sebastian Ullrich
