ma 329 prereq update

--- a/_all-courses/ma329.md
+++ b/_all-courses/ma329.md
@@ -7,26 +7,20 @@ books:
   - author: L. Hormander
     title: Complex Analysis in Several Variables, 3rd edition
     publ: North-Holland Publishing Co. Amsterdam, 1990
-  - author: J.E. Fornaess
-    title: Dynamics in Several Complex Variables
-    publ: CBMS Series, No. 87, American Mathematical Society, Providence, Rhode Island, 1996
+  - author: M. Jarnicki and P. Pflug
+    title: Invariant Distances and Metrics in Complex Analysis
+    publ: de Gruyter Expositions in Mathematics, No. 9, Walter de Gruyter, Berlin, 1993
 prereqs:
-  - MA 224 (i.e., the first course in Complex Analysis)
-  - preferably, some exposure to complex dynamics in one variable (the latest iteration of the topics course MA 324, Topics in Complex Analysis in One Variable, for instance).
-  - Students who have not seen any one-dimensional complex dynamics earlier but are highly interested in this course are encouraged to speak to the instructor.
+  - A first course in complex analysis (at the level of MA 224: the department's first course in complex analysis).
+  - Students who are unsure of the contents of MA 224 (e.g., students who completed their M.Sc. elsewhere) and are interested in this course are encouraged to speak/write to the instructor.
 prereq-courses: 
 ug-prereq-courses: 
 ---
 
 
 
-This topics course is being run as an experiment in approaching the basic concepts in several complex variables with the eventual aim of studying some topics in multi-variable complex dynamics. By "complex dynamics", we mean the the study of the dynamical system that arises in iterating a holomorphic map.
+This topics course is being run as an experiment in approaching the properties of holomorphic maps in several complex variables (SCV) in a self-contained manner (i.e., without requiring any prior exposure to SCV).
 
-The course will begin with a complete and rigorous introduction to holomorphic functions in several variables and their basic properties. This will pave the way to motivating and studying a concept that is, perhaps, entirely indigenous to several complex variables: the notion of plurisubharmonicity.
+The course will begin with a complete and rigorous introduction to holomorphic functions in several variables and their basic properties. This will pave the way to motivating and studying some objects that are, perhaps, entirely indigenous to SCV: e.g., plurisubharmonic functions and invariant metrics. This will allow us to discuss the inequivalence of the (Euclidean) ball and the polydisc in higher dimensions, and to discuss appropriate analogues of the one-variable Riemann Mapping Theorem in higher dimensions. 
 
-Next, we shall look at some of the motivations behind the study of complex dynamics in several variables. Using the tools developed, we shall undertake a crash-course in currents, which are objects central to the study of some aspects of complex dynamics. We shall then cover as much of the following topics as time permits:
-
-* Properties of fixed points
-* The existence of proper subdomains of $C^n$, $n \geq 2$, that are holomorphically equivalent to $C^n$
-* The Fatou and the Julia set for a dominant holomorphic self-map of $CP^n$, $n \geq 2$
-* The Green current associated to a dominant holomorphic self-map of $CP^n$, and the dynamical information that it provides.
+Next, we shall study the properties of the Kobayashi metric (which is one of the invariant metrics mentioned above) and the Kobayashi distance. This will be used to study the behaviour of automorphisms of bounded domains and refinements of some of the results hinted at above -- to the extent that time permits.
