ma 329 prereq updated

--- a/_all-courses/ma329.md
+++ b/_all-courses/ma329.md
@@ -2,7 +2,7 @@
 
 
 code: MA 329
-title: Topics in Several Complex Variables
+title: "Topics in Several Complex Variables"
 books:
   - author: L. Hormander
     title: Complex Analysis in Several Variables, 3rd edition
@@ -11,7 +11,7 @@ books:
     title: Invariant Distances and Metrics in Complex Analysis
     publ: de Gruyter Expositions in Mathematics, No. 9, Walter de Gruyter, Berlin, 1993
 prereqs:
-  - A first course in complex analysis (at the level of MA 224: the department's first course in complex analysis).
+  - A first course in complex analysis at the level of MA 224 (i.e., our first course in complex analysis).
   - Students who are unsure of the contents of MA 224 (e.g., students who completed their M.Sc. elsewhere) and are interested in this course are encouraged to speak/write to the instructor.
 prereq-courses: 
 ug-prereq-courses: 
