--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,137 @@
+@article {MR4437945,
+    AUTHOR = {Nandakumaran, Akambadath Keerthiyil and Sankar, Kasinathan},
+     TITLE = {Homogenization of the heat equation in a noncylindrical domain
+              with randomly oscillating boundary},
+   JOURNAL = {Math. Methods Appl. Sci.},
+  FJOURNAL = {Mathematical Methods in the Applied Sciences},
+    VOLUME = {45},
+      YEAR = {2022},
+    NUMBER = {10},
+     PAGES = {6435--6458},
+      ISSN = {0170-4214},
+   MRCLASS = {35B27 (35K05 35Q74 35R37 35R60)},
+  MRNUMBER = {4437945},
+       DOI = {10.1002/mma.8179},
+       URL = {https://doi.org/10.1002/mma.8179},
+}
+		
+@article {MR4432484,
+    AUTHOR = {Datt, Gopal},
+     TITLE = {Meromorphically normal families in several variables},
+   JOURNAL = {Comput. Methods Funct. Theory},
+  FJOURNAL = {Computational Methods and Function Theory},
+    VOLUME = {22},
+      YEAR = {2022},
+    NUMBER = {2},
+     PAGES = {307--321},
+      ISSN = {1617-9447},
+   MRCLASS = {32A19 (30D45 32H04 32Q45)},
+  MRNUMBER = {4432484},
+       DOI = {10.1007/s40315-021-00413-5},
+       URL = {https://doi.org/10.1007/s40315-021-00413-5},
+}
+		
+@article {MR4429316,
+    AUTHOR = {Monsurr\`o, S. and Nandakumaran, A. K. and Perugia, C.},
+     TITLE = {Exact internal controllability for a problem with imperfect
+              interface},
+   JOURNAL = {Appl. Math. Optim.},
+  FJOURNAL = {Applied Mathematics and Optimization},
+    VOLUME = {85},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {Paper No. 27, 33},
+      ISSN = {0095-4616},
+   MRCLASS = {93B05 (35Q93 93C20)},
+  MRNUMBER = {4429316},
+       DOI = {10.1007/s00245-022-09843-6},
+       URL = {https://doi.org/10.1007/s00245-022-09843-6},
+}
+		
+@article {MR4428878,
+    AUTHOR = {Gehlawat, Sahil and Verma, Kaushal},
+     TITLE = {On {G}rauert's examples of complete {K}\"{a}hler metrics},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {150},
+      YEAR = {2022},
+    NUMBER = {7},
+     PAGES = {2925--2936},
+      ISSN = {0002-9939},
+   MRCLASS = {32Q05 (32Q10)},
+  MRNUMBER = {4428878},
+       DOI = {10.1090/proc/15795},
+       URL = {https://doi.org/10.1090/proc/15795},
+}
+		
+@article {MR4426043,
+    AUTHOR = {Mallik, Gouranga},
+     TITLE = {Goal-oriented a posteriori error estimation for the biharmonic
+              problem based on an equilibrated moment tensor},
+   JOURNAL = {Comput. Math. Appl.},
+  FJOURNAL = {Computers \& Mathematics with Applications. An International
+              Journal},
+    VOLUME = {117},
+      YEAR = {2022},
+     PAGES = {312--325},
+      ISSN = {0898-1221},
+   MRCLASS = {65N30 (65N15 65N50)},
+  MRNUMBER = {4426043},
+       DOI = {10.1016/j.camwa.2022.04.021},
+       URL = {https://doi.org/10.1016/j.camwa.2022.04.021},
+}
+		
+@article {MR4425339,
+    AUTHOR = {Ghara, Soumitra and Kumar, Surjit and Pramanick, Paramita},
+     TITLE = {{$\Bbb K$}-homogeneous tuple of operators on bounded symmetric
+              domains},
+   JOURNAL = {Israel J. Math.},
+  FJOURNAL = {Israel Journal of Mathematics},
+    VOLUME = {247},
+      YEAR = {2022},
+    NUMBER = {1},
+     PAGES = {331--360},
+      ISSN = {0021-2172},
+   MRCLASS = {47B38 (32A35 32M15 46E22 47A13 47B37)},
+  MRNUMBER = {4425339},
+       DOI = {10.1007/s11856-021-2268-0},
+       URL = {https://doi.org/10.1007/s11856-021-2268-0},
+}
+		
+@article {MR4423688,
+    AUTHOR = {Sain, Debmalya and Roy, Saikat},
+     TITLE = {On best approximations in {B}anach spaces from the perspective
+              of orthogonality},
+   JOURNAL = {Banach J. Math. Anal.},
+  FJOURNAL = {Banach Journal of Mathematical Analysis},
+    VOLUME = {16},
+      YEAR = {2022},
+    NUMBER = {3},
+     PAGES = {Paper No. 38, 26},
+      ISSN = {2662-2033},
+   MRCLASS = {46B28 (46B20)},
+  MRNUMBER = {4423688},
+       DOI = {10.1007/s43037-022-00194-6},
+       URL = {https://doi.org/10.1007/s43037-022-00194-6},
+}
+		
+@article {MR4422209,
+    AUTHOR = {Belton, Alexander and Guillot, Dominique and Khare, Apoorva
+              and Putinar, Mihai},
+     TITLE = {Moment-sequence transforms},
+   JOURNAL = {J. Eur. Math. Soc. (JEMS)},
+  FJOURNAL = {Journal of the European Mathematical Society (JEMS)},
+    VOLUME = {24},
+      YEAR = {2022},
+    NUMBER = {9},
+     PAGES = {3109--3160},
+      ISSN = {1435-9855},
+   MRCLASS = {15B48 (26C05 30E10 44A60)},
+  MRNUMBER = {4422209},
+       DOI = {10.4171/jems/1145},
+       URL = {https://doi.org/10.4171/jems/1145},
+}
+		
 @article {MR4420102,
     AUTHOR = {Bhattacharyya, Tirthankar and Biswas, Anindya and Maitra,
               Anwoy},
@@ -28,6 +162,22 @@
   MRNUMBER = {4415946},
        DOI = {10.7153/dea-2022-14-03},
        URL = {https://doi.org/10.7153/dea-2022-14-03},
+}
+		
+@article {MR4413502,
+    AUTHOR = {Chenakkod, Shabarish and Faraco, Gianluca and Gupta, Subhojoy},
+     TITLE = {Translation surfaces and periods of meromorphic differentials},
+   JOURNAL = {Proc. Lond. Math. Soc. (3)},
+  FJOURNAL = {Proceedings of the London Mathematical Society. Third Series},
+    VOLUME = {124},
+      YEAR = {2022},
+    NUMBER = {4},
+     PAGES = {478--557},
+      ISSN = {0024-6115},
+   MRCLASS = {30F30 (32G15 57K20)},
+  MRNUMBER = {4413502},
+       DOI = {10.1112/plms.12432},
+       URL = {https://doi.org/10.1112/plms.12432},
 }
 		
 @article {MR4411728,
